# DDS2Image

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: BinaryReader.h  Converter.h  Factory.h
include/Converters/: ATCAConverter.h  ATCIConverter.h  Converter.h  ConverterFactory.h  Factory.h
include/Encoders/: AnimatedPNGEncoder.h  Encoder.h  PNGEncoder.h
include/Helpers/: BinaryReader.h  BinaryStream.h  stb_image_write.h
include/Readers/: Factory.h  Reader.h
include/Readers/DDS/: ATCAReader.h  ATCIReader.h  DDSReader.h
include/Writers/: PNGWriter.h  Writer.h
lib/: stb_image_write.h
src/: BinaryReader.cpp  Converter.cpp  Factory.cpp  main.cpp
src/Converters/: Converter.cpp  ConverterFactory.cpp  Factory.cpp
src/Encoders/: Encoder.cpp
src/Helpers/: BinaryReader.cpp  BinaryStream.cpp
src/Readers/: Factory.cpp  Reader.cpp
src/Readers/DDS/: DDSReader.cpp
src/Writers/: Writer.cpp
